<resources>
    <string name="app_name" translatable="false">Earth Map 3d</string>

    <string name="camera_live">Camera Live</string>
    <string name="camera_360">Camera 360</string>
    <string name="earth_3d">Earth Map 3D</string>
    <string name="famous_place">Famous Place</string>
    <string name="traffic_map">Traffic Map</string>
    <string name="world_clock">World Clock</string>
    <string name="air_quality">Air Quality</string>
    <string name="compass">Compass</string>

    <string name="settings">Settings</string>
    <string name="share_this_app">Share App</string>
    <string name="language">Languages</string>
    <string name="title_rate_0">Thank you for using the app!</string>
    <string name="content_rate_0">We would appreciate your review!</string>
    <string name="title_rate_1">Oh No!</string>
    <string name="content_rate_1">We want to know what made you unsatisfied.</string>
    <string name="title_rate_2">Oh No!</string>
    <string name="content_rate_2">We want to know what made you unsatisfied.</string>
    <string name="title_rate_3">Oh, un fortunately!</string>
    <string name="content_rate_3">We look forward to receiving your feedback to improve.</string>
    <string name="title_rate_4">Thank you!</string>
    <string name="content_rate_4">We will do our best to provide an even better experience.</string>
    <string name="title_rate_5">Wow, great!</string>
    <string name="content_rate_5">Your satisfaction is our greatest motivation!</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="please_rate_us_5_star">Please rate us 5 stars</string>
    <string name="check_out_my_app_at">Hey check out my app at %s</string>
    <string name="the_best_we_can_get">The best we can get</string>
    <string name="do_you_want_to_exit_the_app">Do you want to exit the app?</string>
    <string name="_cancel">Cancel</string>
    <string name="_exit">Exit</string>
    <string name="recommend">Recomment</string>

    <string name="angle">Angle</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="true_heading">True Heading</string>
    <string name="axis">Axis</string>
    <string name="sensor_error">Sensor error</string>
    <string name="search_here">Search here</string>
    <string name="location_access">Location Access</string>
    <string name="app_needs_access_to_your_current_location_for_display_current">App needs access to your current location for display current</string>
    <string name="no_data">Data empty!</string>
    <string name="sunny">Sunny</string>
    <string name="rain">Rain</string>
    <string name="snowy">Snowy</string>
    <string name="foggy">Foggy</string>
    <string name="information">Information</string>
    <string name="_7_days">7 days</string>

    <string name="info">Info</string>
    <string name="weather">Weather</string>
    <string name="travel">Travel</string>
    <string name="recent">Recent</string>
    <string name="air_0_50">0-50</string>
    <string name="air_51_100">51-100</string>
    <string name="air_101_150">101-150</string>
    <string name="air_151_200">151-200</string>
    <string name="air_201_300">201-300</string>
    <string name="air_300">301+</string>
    <string name="air_good">Good</string>
    <string name="air_moderate">Moderate</string>
    <string name="air_unhealthy_for_Sensitive">Unhealthy for Sensitive</string>
    <string name="air_unhealthy">Unhealthy</string>
    <string name="air_very_unhealthy">Very Unhealthy</string>
    <string name="air_hazardous">Hazardous</string>
    <string name="apply">Apply</string>
    <string name="content_confirm_use_item_coin">Do you want to use this coin to use this item?</string>
    <string name="premium">Premium</string>
    <string name="_buy_now">Buy now</string>
    <string name="you_will_be_billed_within_24_hours_before_the_current_period_ends_you_can_manage_or_cancel_your_subscriptions_anytime_through_your_google_play_account_settings">You will be billed within 24 hours before the current period ends. You can manage or cancel your subscriptions anytime through your Google Play account settings.</string>

</resources>