<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivCompass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg_compass"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/llAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/llAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/bg_header"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingTop="@dimen/_26sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_500"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_weight="1"
            android:text="@string/compass"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />


    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_compass_kim"
        app:layout_constraintTop_toTopOf="@id/ivCompass"
        app:layout_constraintStart_toStartOf="@id/ivCompass"
        app:layout_constraintEnd_toEndOf="@id/ivCompass"
        app:layout_constraintBottom_toBottomOf="@id/ivCompass"
        />

    <LinearLayout
        android:id="@+id/lnContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginHorizontal="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@id/ivCompass"
        android:background="@drawable/bg_border_16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_8sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/angle"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAngle"
                style="@style/Text_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="89"
                android:textColor="@color/color_455EFF"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_8sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/magnetic_field"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMagnetic"
                style="@style/Text_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19μT"
                android:textColor="@color/color_455EFF"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_8sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/true_heading"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTrueHeading"
                style="@style/Text_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="133"
                android:textColor="@color/color_455EFF"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_8sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/axis"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAxis"
                style="@style/Text_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x = 66° y = 2°"
                android:textColor="@color/color_455EFF"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNotSensor"
        style="@style/Text_400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginHorizontal="@dimen/_13sdp"
        app:lineHeight="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/ivCompass"
        android:background="@drawable/bg_border_16dp"
        android:backgroundTint="@color/color_1C1C1E"
        android:text="@string/sensor_error"
        android:textSize="@dimen/_11ssp" />


</androidx.constraintlayout.widget.ConstraintLayout>
