<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flRatingAppRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_radius_12"
        android:clickable="true"
        android:elevation="@dimen/_10sdp"
        android:focusable="true"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_15sdp">

        <ImageView
            android:id="@+id/imv_ic_rate"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/rate_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20sdp"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:text="@string/title_rate_0"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_ic_rate" />


        <TextView
            android:id="@+id/you_rate_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_400"
            android:gravity="center"
            android:text="@string/content_rate_0"
            android:textColor="#4E5969"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.earthmap.map.ltv.tracker.com.freelances.earthmap3d.extensions.utils.CustomRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            app:emptyLastStarDrawable="@drawable/ic_star_suggest"
            app:emptyStarDrawable="@drawable/ic_star_inactive"
            app:filledLastStarDrawable="@drawable/ic_start_active"
            app:filledStarDrawable="@drawable/ic_start_active"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/you_rate_us"
            app:maxRating="5"
            app:starSpacing="@dimen/_16sdp" />


        <ImageView
            android:id="@+id/arrowUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ic_arrow_up"
            app:layout_constraintEnd_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />


        <TextView
            android:id="@+id/tvBestRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/roboto_400"
            android:gravity="center|end"
            android:text="@string/the_best_we_can_get"
            android:textColor="@color/color_455EFF"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/arrowUp"
            app:layout_constraintEnd_toStartOf="@id/arrowUp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rateUsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/bg_button_gradient"
            android:ellipsize="marquee"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:paddingVertical="@dimen/_10sdp"
            android:singleLine="true"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrowUp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>



