<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_26sdp"
        android:paddingBottom="@dimen/_6sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:background="@color/transparent"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/Text_500"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llAppBar">

        <LinearLayout
            android:id="@+id/lnLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_setting_language" />

            <TextView
                style="@style/Text_400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_around_right"
                app:tint="#6B7785" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_border_16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_setting_share" />

            <TextView
                style="@style/Text_400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:text="@string/share_this_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_around_right"
                app:tint="#6B7785" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_border_16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_setting_rate" />

            <TextView
                style="@style/Text_400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:text="@string/rate_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_around_right"
                app:tint="#6B7785" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
